# bhagavad-gita-api

./: .all-contributorsrc  .deepsource.toml  .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Caddyfile  Contributing.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  Makefile  README.md  cookie_iiradhakrishnaii.bot  database.py  docker-compose.dev.yml  docker-compose.prod.yml  graphql_queries.md  insertAuthors.py  insertChapters.py  insertCommentaries.py  insertLanguages.py  insertReferenceVerseIntoChapters.py  insertReferencesCommentaries.py  insertReferencesTranslations.py  insertTranslations.py  insertVerses.py  main.py  models.py  mypy.ini  pyproject.toml  requirements.txt  sql_app.db  tempCodeRunnerFile.py  wait_for_db.sh
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  other.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy.yml  quality.yml  test.yml
api/: database.py  graphql.py  main.py  models.py  schema.py  schemas.py
app/: graphql2.py  main.py
app/db/: session.py
app/gita_data/data/: chapters (2).json  languages.json  translation.json
app/gita_data/scripts/: insertAuthors.py  insertChapters.py  insertCommentaries.py  insertLanguages.py  insertReferenceVerseIntoChapters.py  insertTranslations.py  insertVerses.py
app/models/: gita.py
bhagavad_gita_api/: MyIGBot.py  SocialBot.py  __init__.py  cli.py  config.py  crud.py  graphql.py  graphql2.py  graphql2_old.py  gunicorn.conf.py  main.py  utils.py
bhagavad_gita_api/api/: deps.py
bhagavad_gita_api/cronjobs/: celery.py
bhagavad_gita_api/data/: __init__.py  helpers.py
bhagavad_gita_api/db/: init_db.py  session.py
bhagavad_gita_api/models/: gita.py  schemas.py  user.py
bhagavad_gita_api/test/: test_test.py
data/: authors.json  translation.json
deploy/: database.py  graphql2.py  main.py  models.py  requirements.txt  schemas.py
deploy/.deta/: prog_info  state
gita data/data/: authors.json  chapters (2).json  chapters.json  languages.json  translation.json  verse.json
gita data/ops/: insertAuthors.py  insertCommentaries.py  insertLanguages.py  insertReferenceVerseIntoChapters.py  insertReferencesCommentaries.py  insertReferencesTranslations.py  insertTranslations.py  insertVerses.py
ops/: insertChapters.py
sql_app/: database.py  models.py  schemas.py
src/: config.py  crud.py  data.sh  graphql2.py  main.py
src/api/: deps.py
src/api/api_v2/: api.py
src/db/: init_db.py  session.py
src/gita_data/: authors.json  chapters.json  verse.json
src/models/: gita.py  user.py
src/schemas/: gita.py
src/scripts/: insert_authors.py  insert_chapters.py  insert_commentaries.py  insert_languages.py  insert_references_commentaries.py  insert_references_translations.py  insert_translations.py  insert_verses.py
(+18 files in other folders)
