[tool.poetry]
name = "bhagavad-gita-api"
version = "2.0.2"
description = "Bhagavad Gita API allows any developer to use content from Bhagavad Gita in their applications."
authors = ["The Gita Initiative <contact@bhagavadgita.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://bhagavadgita.io/"
repository = "https://github.com/gita/bhagavad-gita-api"
keywords = ["python","fastapi","api","gita","bhagavad-gita"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
graphene-elastic = "^0.7"
psycopg2-pgevents = "^0.2.2"
SQLAlchemy = "^1.4.19"
uvicorn = "^0.14.0"
graphene-sqlalchemy = "^2.3.0"
graphene-sqlalchemy-filter = "^1.12.2"
python-dotenv = "^0.18.0"
pytz = "^2021.1"
rich = "^10.4.0"
graphene = "^2.1.8"
typer = "^0.3.2"
gunicorn = "^20.1.0"
celery = "^5.1.2"
redis = "^3.5.3"
textwrap3 = "^0.9.2"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.6b0"
isort = "^5.9.1"
flake8 = "^3.9.2"
autoflake = "^1.4"
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bhagavad-gita-api = 'bhagavad_gita_api.main:cli'
gita-api = 'bhagavad_gita_api.main:cli'

[tool.isort]
profile = "black"
known_third_party = ["PIL", "celery", "dotenv", "fastapi", "graphene", "graphene_sqlalchemy", "myigbot", "pydantic", "pytz", "requests", "rich", "sqlalchemy", "textwrap3", "typer", "uvicorn"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
